# muxer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  muxer.h  pyproject.toml  requirements.txt
badgerd_muxer/: main.py
badgerd_muxer/devices/: usbmux.py
debian/: changelog  control  copyright  files
